--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: BY Blog
-SEOTitle: 柏荧的博客 | BY Blog
+title: Haorong's Blog
+SEOTitle: 有篇博客 | Haorong's Blog
 header-img: img/post-bg-desk.jpg
 email: ancientmodern@sjtu.edu.cn
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
+keyword: "Lu, Haorong, Haorong's Blog, 有篇博客, luhaorong, 陆昊融, 云计算, Cloud Computing"
 url: "https://ancientmodern.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/ancientmodern/ancientmodern.github.io.git" # you code repository
@@ -19,11 +19,11 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
+zhihu_username: 古今皆付笑谈中
+github_username: ancientmodern
+facebook_username: ancientmodern
+# jianshu_username:   e71990ada2fd
+# twitter_username:   qiubaiying
 
 
 
@@ -32,14 +32,14 @@ jianshu_username:   e71990ada2fd
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 permalink: pretty
 paginate: 10
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+exclude: [ "less","node_modules","Gruntfile.js","package.json","README.md" ]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
 
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
-gems: [jekyll-paginate]
+gems: [ jekyll-paginate ]
 
 
 
@@ -98,17 +98,17 @@ service-worker: true
 
 # Friends
 friends: [
-    {
-        title: "WY",
-        href: "http://zhengwuyang.com"
-    },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
-        title: "Apple",
-        href: "https://apple.com"
-    },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
-    }
+  {
+    title: "WY",
+    href: "http://zhengwuyang.com"
+  },{
+    title: "简书·BY",
+    href: "http://www.jianshu.com/u/e71990ada2fd"
+  },{
+    title: "Apple",
+    href: "https://apple.com"
+  },{
+    title: "Apple Developer",
+    href: "https://developer.apple.com/"
+  }
 ]
