--- a/_config.yml
+++ b/_config.yml
@@ -62,11 +62,11 @@ kramdown:
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  clientID: 0ac50be700064380fa69                           #生成的clientID
+  clientSecret: de012ab55e6567f1378546066d7fd2fb3e8acd26   #生成的clientSecret
+  repo: ancientmodern.github.io    #仓库名称
+  owner: ancientmodern    #github用户名
+  admin: ancientmodern
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
