--- a/_config.yml
+++ b/_config.yml
@@ -11,17 +11,17 @@ github_repo: "https://github.com/ancientmodern/ancientmodern.github.io.git" # yo
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "Too young too simple, sometimes naive."
+sidebar-avatar: /img/lhr-and-cats.jpeg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username: 古今皆付笑谈中
+# zhihu_username: 古今皆付笑谈中
 github_username: ancientmodern
-facebook_username: ancientmodern
+# facebook_username: ancientmodern
 # jianshu_username:   e71990ada2fd
 # twitter_username:   qiubaiying
 
@@ -78,7 +78,7 @@ ba_track_id: b50bf2b12b5338a1845e33832976fd68
 
 # Google Analytics
 ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
-ga_domain: qiubaiying.top               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+ga_domain: auto              # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
