--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ anchorjs: true                          # if you want to customize anchor. check
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
 gems: [ jekyll-paginate ]
+plugins: [jekyll-paginate]
 
 
 
@@ -99,9 +100,6 @@ service-worker: true
 # Friends
 friends: [
   {
-    title: "WY",
-    href: "http://zhengwuyang.com"
-  },{
     title: "简书·BY",
     href: "http://www.jianshu.com/u/e71990ada2fd"
   },{
